[workspace]
members = [".", "examples/html"]
resolver = "3"

[package]
name = "remyx"
description = "A framework for building TUIs on top of Ratatui"
version = "0.1.0-beta"
authors = ["Manuel Garcia de la Vega Hoyo <manuelgdlvh@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/manuelgdlvh/remyx"
categories = ["gui"]
keywords = ["tui", "elm", "ui", "gui", "ratatui"]
rust-version = "1.92"


[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = { version = "0.3.32" }
tokio = {version = "1.52.3", features = ["full"], optional = true}

[features]
default = [ "tokio"]
tokio = ["dep:tokio" ]

[lib]
name = "remyx"
path = "src/lib.rs"
