[workspace]
members = [".", "examples/html"]
resolver = "3"

[package]
name = "remyx"
description = "A framework for building TUIs on top of Ratatui"
version = "0.1.0-beta.3"
authors = ["Manuel Garcia de la Vega Hoyo <manuelgdlvh@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/manuelgdlvh/remyx"
categories = ["gui"]
keywords = ["tui", "elm", "ui", "gui", "ratatui"]
rust-version = "1.92"


[dependencies]
ratatui-core = { version = "0.1.1" }
ratatui-crossterm = { version = "0.1.1" }
remyx-widgets = { git = "https://github.com/remyx-rs/ratatui-widgets.git", branch = "feature/paragraph-stateful" }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = { version = "0.3.32" }
tokio = {version = "1.52.3", features = ["full"], optional = true}

[features]
default = [ "tokio"]
tokio = ["dep:tokio" ]

[lib]
name = "remyx"
path = "src/lib.rs"
