[package]
name = "html"
version = "0.1.0"
authors = ["Manuel Garcia de la Vega Hoyo <manuelgdlvh@gmail.com>"]
edition = "2024"
repository = "https://github.com/manuelgdlvh/remyx"
rust-version = "1.92"

[dependencies]
remyx = { path = "../..", features = ["crossterm", "tokio"] }
reqwest = "0.13.4"
lol_html = "2.9.0"
